[US#GF1] bootstrap4 à bootstrap3
Ajout de la barre du header, ajout du tab inscription/connexion et
changement des verifications vee-validate.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,110 +3,168 @@
 <head>
     <meta charset="UTF-8">
     <title>Vue tutorial</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/enregistrement.css">
+
     <script src="lib/vue.js"></script>
     <script src="lib/vee-validate.js"></script>
     <script src="lib/vue-resource.js"></script>
     <script src="lib/vue-router.js"></script>
+
+
 </head>
 <body>
-<div class="container" id="app">
+<div class="container-fluid" id="app">
     <div class="row">
-        <div class="col-lg-8 col-sm-8 col-8 col-lg-8 col-xl-8 offset-2 ">
-            <div class="card">
-                <br>
-                <div>
+        <div class="col-md-12" style="padding:40px;background-color:blue;margin-bottom: 30px;"></div>
+        <div class="col-lg-8 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-lg-offset-3  col-md-offset-3">
+            <div class="panel panel-default">
+
+
+
+                <ul class="tab-group">
+                    <li class="tab active"><a href="#register-form">Inscription</a></li>
+                    <li class="tab"><a href="#connexion">Connexion</a></li>
+                </ul>
+
+
+                <div class="panel-body">
+
+
                     <div class="row">
-                        <div class="col-md-4 col-sm-4 col-4 col-lg-4 col-xl-4 offset-2 text-center inscriptionLine">
-                            <a href="#" :class="color_inscription" id="register-form-link" @click="changeColorConnexion">INSCRIPTION</a>
-                        </div>
-                        <div class="col-md-4 col-sm-4 col-4 col-lg-4 col-xl-4 text-center connexionLine">
-                            <a href="#" :class="color_connexion" id="login-form-link" @click="changeColorInscription">CONNEXION</a>
-                        </div>
-                    </div>
-                </div> <!-- Fin panel heading -->
-                <div class="card-block">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6 col-6 col-lg-6 col-xl-6 offset-3">
+                        <div class="col-xs-12 col-xm-12 col-md-6 cold-lg-6 col-offset-3 col-md-offset-3">
+
                             <form id="register-form" @submit.prevent="verifyForm">
+
                                 <!-- MATRICULE-->
-                                <diV>
-                                    <div class="form-group" :class="{'input': true,'has-danger': errors.has('matricule')}">
-                                        <label for="matricule">Code de login</label>
-                                        <div class="inner-addon left-addon">
-                                            <i class="fa fa-barcode"></i>
-                                            <input type="text" v-validate="'required|matricule'" id="matricule" name="matricule" tabindex="1" class="form-control "
-                                                   placeholder="ABC1234" v-model="collaborator.personnalIdNumber">
-                                            <p class="text-danger" v-if="errors.has('matricule')">{{errors.first('matricule') }}</p>
-                                            <span v-show="!isNewPersonalIdNumber" class="color-red ">Ce code de login a déjà été enregistré.</span>
+
+
+                                <div class="form-group" :class="{'input': true,'has-error': errors.has('matricule') || msgmatricule}">
+                                    <label for="matricule">Code de login</label>
+
+                                    <div class="inner-addon left-addon">
+                                        <i class="glyphicon glyphicon-barcode"></i>
+                                        <input type="text" v-validate="'matricule'" id="matricule" name="matricule" tabindex="1" class="form-control has-left-icon"
+                                               placeholder="ABC1234" v-model="collaborator.personnalIdNumber" @focus="isNewPersonalIdNumber = true; msgmatricule = false" @blur="messageMatricule"  onfocus="this.placeholder = ''" onblur="this.placeholder = 'ABC1234' ">
+                                        <span v-show="msgmatricule" class="color-red ">Matricule est obligatoire.</span>
+                                        <span v-show="errors.has('matricule')" class="color-red ">{{ errors.first('matricule') }}</span>
+                                        <span v-show="!isNewPersonalIdNumber" class="color-red ">Ce code de login a déjà été enregistré.</span>
+                                    </div>
+
+                                </div>
+
+
+                                <!-- NOM -->
+
+                                <div class="form-group" :class="{'input': true,'has-error': errors.has('nom') || msgnom }">
+                                    <label for="nom">Nom</label>
+
+                                    <div class="inner-addon left-addon" :class="{ 'control': true }">
+                                        <i class="glyphicon glyphicon-user"></i>
+                                        <input type="text" v-validate="'nom'" name="nom" id="nom" tabindex="1" class="form-control " placeholder="DUPONT" v-model="collaborator.lastName " onfocus="this.placeholder = ''" onblur="this.placeholder = 'DUPONT'" @focus="msgnom = false" @blur="messageNom">
+                                        <span v-show="msgnom" class="color-red ">Nom est obligatoire.</span>
+                                        <span v-show="errors.has('nom')" class="color-red ">{{ errors.first('nom') }}</span>
+                                    </div>
+
+                                </div>
+
+                                <!-- PRENOM -->
+
+                                <div class="form-group" :class="{'input': true,'has-error': errors.has('prenom') || msgprenom }">
+                                    <label for="prenom">Prénom</label>
+
+                                    <div class="inner-addon left-addon" :class="{ 'control': true }">
+                                        <i class="glyphicon glyphicon-user"></i>
+                                        <input type="text" v-validate="'prenom'" name="prenom" id="prenom" tabindex="2" class="form-control" placeholder="Eric" v-model="collaborator.firstName" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Eric'" @focus="msgprenom = false" @blur="messagePrenom">
+                                        <span v-show="msgprenom" class="color-red ">Prénom est obligatoire.</span>
+                                        <span v-show="errors.has('prenom')" class="color-red ">{{ errors.first('prenom') }}</span>
+                                    </div>
+
+                                </div>
+
+                                <!-- EMAIL -->
+
+                                <div class="form-group" :class="{'input': true,'has-error': errors.has('email') || msgemail }">
+                                    <label for="email">Email</label>
+
+                                    <div class="inner-addon left-addon" :class="{ 'control': true }">
+                                        <i class="glyphicon glyphicon-envelope"></i>
+                                        <input type="email" v-validate="'email'" name="email" id="email" tabindex="2" class="form-control" placeholder="eric.dupont@viseo.com"  v-model="collaborator.email" @focus="isNewEmail = true; msgemail = false" @blur="messageEmail" onfocus="this.placeholder = ''" onblur="this.placeholder = 'eric.dupont@viseo.com'">
+                                        <span v-show="msgemail" class="color-red ">Email est obligatoire.</span>
+                                        <span v-show="errors.has('email')" class="color-red ">{{ errors.first('email') }}</span>
+                                        <span v-show="!isNewEmail" class="color-red ">Ce email a déjà été enregistré.</span>
+                                    </div>
+
+                                </div>
+
+                                <!-- MOT DE PASSE -->
+
+                                <div class="form-group" :class="{'input': true, 'has-error': errors.has('mdp') || msgpwd }">
+                                    <label for="mdp">Mot de passe</label>
+
+                                    <div class="password" :class="{ 'control': true }">
+                                        <i class="glyphicon glyphicon-lock"></i>
+                                        <span @click="showPass = !showPass" v-show="!showPass && collaborator.password" class="glyphicon glyphicon-eye-open" > </span>
+                                        <span @click="showPass = false" v-show="showPass && collaborator.password" class="glyphicon glyphicon-eye-close" > </span>
+                                        <input type="password" v-model="collaborator.password" v-show="!showPass" v-validate="'mdp'" name="mdp" id="mdp" tabindex="2" class="form-control" placeholder="••••••" onfocus="this.placeholder = ''" onblur="this.placeholder = '••••••'" @focus="msgpwd = false" @blur="messagePwd">
+                                        <input type="text" v-model="collaborator.password" v-show="showPass"v-validate="'mdp'" name="mdp" id="mdp2" tabindex="2" class="form-control" @focus="msgpwd = false" @blur="messagePwd" >
+                                        <span v-show="msgpwd" class="color-red ">Mot de passe est obligatoire.</span>
+                                        <span v-show="errors.has('mdp')" class="color-red">{{ errors.first('mdp') }}</span>
+                                    </div>
+
+                                </div>
+
+                                <!-- CONFIRMATION MOT DE PASSE -->
+
+                                <div class="form-group" :class="{'input': true, 'has-error': errors.has('mdpc') || msgconfirmpwd }">
+                                    <label for="mdpc">Confirmation mot de passe</label>
+
+                                    <div class="password" :class="{ 'control': true }">
+                                        <i class="glyphicon glyphicon-lock "></i>
+                                        <span @click="showPassConf = !showPassConf" v-show="!showPassConf && collaborator.confirmPassword" class="glyphicon glyphicon-eye-open " > </span>
+                                        <span @click="showPassConf = false" v-show="showPassConf && collaborator.confirmPassword" class="glyphicon glyphicon-eye-close " > </span>
+                                        <input type="password"  v-model="collaborator.confirmPassword" v-validate="'confirmed:mdp'" v-show="!showPassConf" name="mdpc" id="mdpc" tabindex="2" class="form-control" placeholder="••••••" onfocus="this.placeholder = ''" onblur="this.placeholder = '••••••'" @focus="msgconfirmpwd = false" @blur="messageConfirmpwd">
+                                        <input type="text"  v-model="collaborator.confirmPassword" v-validate="'confirmed:mdp'" v-show="showPassConf" name="mdpc" id="mdpc2" tabindex="2" class="form-control" @focus="msgconfirmpwd = false" @blur="messageConfirmpwd">
+                                        <span v-show="msgconfirmpwd" class="color-red ">Confirmation est obligatoire.</span>
+                                        <span v-show="errors.has('mdpc')" class="color-red">{{ errors.first('mdpc') }}</span>
+                                    </div>
+
+                                </div>
+
+
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-xs-12 col-xm-12 col-md-6 cold-lg-6 col-lg-offset-3 col-md-offset-3">
+                                            <button type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-primary" >S'inscrire</button>
                                         </div>
                                     </div>
-                                    <!-- NOM -->
-                                    <div class="form-group" :class="{'input': true,'has-danger': errors.has('nom')}">
-                                        <label for="nom">Nom</label>
-                                        <div class="inner-addon left-addon" :class="{ 'control': true }">
-                                            <i class="fa fa-user"></i>
-                                            <input type="text" v-validate="'required|nom'" name="nom" id="nom" tabindex="1" class="form-control " placeholder="DUPONT" v-model="collaborator.lastName">
-                                            <span v-show="errors.has('nom')" class="color-red ">{{ errors.first('nom') }}</span>
-                                        </div>
-                                    </div>
-                                    <!-- PRENOM -->
-                                    <div class="form-group" :class="{'input': true,'has-danger': errors.has('prenom') }">
-                                        <label for="prenom">Prénom</label>
-                                        <div class="inner-addon left-addon" :class="{ 'control': true }">
-                                            <i class="fa fa-user"></i>
-                                            <input type="text" v-validate="'required|prenom'" name="prenom" id="prenom" tabindex="2" class="form-control" placeholder="Eric" v-model="collaborator.firstName">
-                                            <span v-show="errors.has('prenom')" class="color-red ">{{ errors.first('prenom') }}</span>
-                                        </div>
-                                    </div>
-                                    <!-- EMAIL -->
-                                    <div class="form-group" :class="{'input': true,'has-danger': errors.has('email') }">
-                                        <label for="email">Email</label>
-                                        <div class="inner-addon left-addon" :class="{ 'control': true }">
-                                            <i class="fa fa-envelope"></i>
-                                            <input type="email" v-validate="'required|email'" name="email" id="email" tabindex="2" class="form-control" placeholder="eric.dupont@viseo.com"  v-model="collaborator.email">
-                                            <span v-show="errors.has('email')" class="color-red ">{{ errors.first('email') }}</span>
-                                            <span v-show="!isNewEmail" class="color-red ">Ce email a déjà été enregistré.</span>
-                                        </div>
-                                    </div>
-                                    <!-- MOT DE PASSE -->
-                                    <div class="form-group" :class="{'input': true, 'has-danger': errors.has('mdp') }">
-                                        <label for="mdp">Mot de passe</label>
-                                        <div class="password" :class="{ 'control': true }">
-                                            <i class="fa fa-lock"></i>
-                                            <span class="fa fa-eye"></span>
-                                            <input type="password" v-validate="'required|mdp'" name="mdp" id="mdp" tabindex="2" class="form-control" placeholder="••••••" v-model="collaborator.password">
-                                            <span v-show="errors.has('mdp')" class="color-red">{{ errors.first('mdp') }}</span>
-                                        </div>
-                                    </div>
-                                    <!-- CONFIRMATION MOT DE PASSE -->
-                                    <div class="form-group" :class="{'input': true, 'has-danger': errors.has('mdpc') }">
-                                        <label for="mdpc">Confirmation mot de passe</label>
-                                        <div class="password" :class="{ 'control': true }">
-                                            <i class="fa fa-lock"></i>
-                                            <span class="fa fa-eye"></span>
-                                            <input type="password" v-validate="'required|confirmed:mdp'" name="mdpc" id="mdpc" tabindex="2" class="form-control" placeholder="••••••" v-model="collaborator.confirmPassword">
-                                            <span v-show="errors.has('mdpc')" class="color-red">{{ errors.first('mdpc') }}</span>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-md-6 col-sm-6 col-6 col-lg-6 col-xl-6 offset-3">
-                                                <button type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-primary" >S'inscrire</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </diV>
+                                </div>
+
                             </form>
+
+
                         </div>
+
                     </div>
                 </div>
+
+
+
+
+
             </div>
+
+
+
         </div>
+
+
     </div>
-    <pre>{{$data | json}}</pre>
+</div>
+</div>
+</div>
+
 </div>
 
 
