--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="container-fluid" id="app">
     <div class="row">
-        <div class="col-md-12" style="padding:40px;background-color:blue;margin-bottom: 30px;"></div>
+        <div class="col-md-12" style="padding:40px;background-color:#428bca;margin-bottom: 30px;"></div>
         <div class="col-lg-8 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-lg-offset-3  col-md-offset-3">
             <div class="panel panel-default">
 
