--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -15,16 +15,14 @@
     <title>AjouterFormation</title>
 </head>
 <body>
-<div class="container" id="TrainingTopic">
+<div class="container-fluid" id="TrainingTopic">
     <div class="row"><!-- row 1-->
         <div class="col-md-12" style="padding:40px;background-color:blue;margin-bottom: 30px;"></div>
-        <div class="row"><!-- row 2-->
-            <div class="col-xs-7 col-sm-7col-md-7 col-lg-7">
-
-                <h4>Ajouter une formation</h4>
+            <div class="col-xs-12 col-sm-10 col-md-7 col-lg-7 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
 
                     <form class="" @submit.prevent="verifyTrainingForm">
-                        <table class="">
+                        <legend>Ajouter une formation</legend>
+                        <table>
                             <td width="20%">
                                 <div class="form-group">
                                     <label for="formation" class="label-control">Formation</label><br/><br/>
@@ -70,7 +68,7 @@
                                            class="text-center color-green ">La formation a été créée avec succès.</span>
                                  </div>-->
                             </td>
-                            <td width="25%" class="td-right">
+                            <td width="30%" class="td-right">
                                 <form>
                                     <div class=" form-group has-feedback">
                                         <label class="label-control" for="nt">Nouveau thème</label><br/><br/>
@@ -110,7 +108,6 @@
                     </form>
 
             </div>
-        </div><!--Fin row 2-->
     </div><!--Fin row 1-->
 </div>
 <script src="app/controller/registerTrainingTopic.js"></script>
